--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -22,9 +22,9 @@ headerHostname=identity-int.schneider-electric.com
 conduct_name=https://identity-int.schneider-electric.com/.*
 jksPassword=Passw0rd
 #jksFilePath=/apache-tomcat-8.5.11/NginxTomcat.jks
-jksFilePath=/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
+#jksFilePath=/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
 
-#jksFilePath=C:\\subbu\\cofigfiles\\NginxTomcat.jks
+jksFilePath=C:\\Softwares\\apache-tomcat-8.0.41\\NginxTomcat.jks
 
 uims.application.name=idms
 
