--- a/idmsc_restapi/schneider-idms-service/pom.xml
+++ b/idmsc_restapi/schneider-idms-service/pom.xml
@@ -36,6 +36,17 @@
 		<finalName>IDMS</finalName>
 	</build>
 
+<!-- <repositories>
+	<repository>
+	   <id>forgerock-private-releases</id>
+	   <url>https://maven.forgerock.org/repo/private-releases</url> 
+	   <snapshots>
+	      <enabled>false</enabled>
+	   </snapshots>
+	   
+	</repository>
+</repositories> -->
+
 	<dependencies>
 
 	<dependency>
@@ -334,6 +345,19 @@
 		    <groupId>com.detectlanguage</groupId>
 		    <artifactId>detectlanguage</artifactId>
 		    <version>1.0.6</version>
+		</dependency>
+		
+	<!--   <dependency>
+	    <groupId>org.forgerock.opendj</groupId>
+	    <artifactId>opendj-ldap-sdk</artifactId>
+	    <version>2.6.0</version>
+	  </dependency>
+			 -->
+			 
+		<dependency>
+				<groupId>com.opencsv</groupId>
+				<artifactId>opencsv</artifactId>
+				<version>3.8</version>
 		</dependency>
 
 	</dependencies>
