--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -65,5 +65,9 @@ uimsCompanyManagerPortName=CompanyManagementV2
 
 hotpEmailVerificationURL=https://identity-int.schneider-electric.com/ui#!/email-verification?
 
+authCsvPath=C:\\Software\\apache-tomcat-8.0.43\\auth_logs.csv
+registrationCsvPath=C:\\Software\\apache-tomcat-8.0.43\\reg_logs.csv
+
+
 
 
