Path for csv logs

--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -65,8 +65,8 @@ uimsCompanyManagerPortName=CompanyManagementV2
 
 hotpEmailVerificationURL=https://identity-int.schneider-electric.com/ui#!/email-verification?
 
-authCsvPath=C:\\Software\\apache-tomcat-8.0.43\\auth_logs.csv
-registrationCsvPath=C:\\Software\\apache-tomcat-8.0.43\\reg_logs.csv
+authCsvPath=/tomcat/apache-tomcat-8.5.11/logs/auth_logs.csv
+registrationCsvPath=/tomcat/apache-tomcat-8.5.11/logs/reg_logs.csv
 
 
 
