PRM set password issue

--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -13,10 +13,10 @@ adminUserName=amadmin
 adminPassword=Password1
 ifwClientId=N2s0I7Ifmxyf5gIDUUihdinmrRUa
 ifwClientSecret=Qy5VK5oQgquECwhXIugBY1aamQca
-salesForceClientId=3MVG98RqVesxRgQ4tM5eh2AD6mYF0.heKVwsRuiTdYMf0wtOslYYe5VHzIDGhVZrkgKAmA6andEVDRtrwQwIZ
-salesForceClientSecret=1249851202561869758
-salesForceUserName=fazticaret.technicaluser@bridge-fo.com.devmerge
-salesForcePassword=Fazticaret#Idms1
+salesForceClientId=3MVG98RqVesxRgQ4tM5eh2AD6mRg8rweqmKPhzIa6FcoIU0Ms4uY21c.lBvmayHOC9zTWFMqbEHc_.G_uib0C
+salesForceClientSecret=3019111300079030700
+salesForceUserName=idmschina.technicaluser@bridge-fo.com.devmerge
+salesForcePassword=idmschina#Idms1
 ha_mode=true
 headerHostname=identity-int.schneider-electric.com
 conduct_name=https://identity-int.schneider-electric.com/.*
