Support user configured and transliterator to PUT

--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -38,7 +38,7 @@ smtpPort=25
 fromUserName=noreply@schneider-electric.com
 #fromUserName=suresh.forgerock@gmail.com
 
-supportUser=AravindhKumar.J@non.schneider-electric.com
+supportUser=IDMSL2Team@schneiderelectric.onmicrosoft.com
 
 #GO Digital Token
 goDitalToken=biKpGwhHNEwPIGrUEFAo8Y7UINX4GLwZOMwWR6eptk8=
