ifw and salesforce details updated

--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -13,8 +13,8 @@ adminUserName=amadmin
 adminPassword=Password1
 ifwClientId=N2s0I7Ifmxyf5gIDUUihdinmrRUa
 ifwClientSecret=Qy5VK5oQgquECwhXIugBY1aamQca
-salesForceClientId=3MVG98RqVesxRgQ4tM5eh2AD6mRg8rweqmKPhzIa6FcoIU0Ms4uY21c.lBvmayHOC9zTWFMqbEHc_.G_uib0C
-salesForceClientSecret=3019111300079030700
+salesForceClientId=3MVG98RqVesxRgQ4tM5eh2AD6mb9oSj8LqQw.s8ozjwVQlm2jrJXiINA_Q.FCIr.UL8Li6bWbXLQtvvShLmhg
+salesForceClientSecret=6894109543626511481
 salesForceUserName=idmschina.technicaluser@bridge-fo.com.devmerge
 salesForcePassword=idmschina#Idms1
 ha_mode=true
