--- a/idmsc_restapi/schneider-idms-service/src/main/resources/log4j.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%-5p] %c
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=${catalina.home}/logs/myapp.log
 log4j.appender.file.Threshold=INFO
-log4j.appender.file.MaxFileSize=15MB
+log4j.appender.file.MaxFileSize=35MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%-5p] %c{1}:%M:%L - %m%n
@@ -20,12 +20,12 @@ log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%-5p] %c{1
 log4j.appender.reportsLog=org.apache.log4j.FileAppender
 log4j.appender.reportsLog.File=${catalina.home}/logs/uims.log
 log4j.appender.reportsLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.reportsLog.layout.ConversionPattern=%d [%-5p][%24F:%t:%L] - %m%n
+log4j.appender.reportsLog.layout.ConversionPattern=%d [%-5p][%24F:%t:%M:%L] - %m%n
 log4j.category.uimsLogger=DEBUG, reportsLog
 
 log4j.appender.godigitalLog=org.apache.log4j.RollingFileAppender
 log4j.appender.godigitalLog.File=${catalina.home}/logs/goDigital.log
-log4j.appender.godigitalLog.MaxFileSize=15MB
+log4j.appender.godigitalLog.MaxFileSize=35MB
 log4j.appender.godigitalLog.MaxBackupIndex=10
 log4j.appender.godigitalLog.layout=org.apache.log4j.PatternLayout
 log4j.appender.godigitalLog.layout.ConversionPattern=%d [%-5p][%24F:%t:%M:%L] - %m%n
@@ -33,7 +33,7 @@ log4j.category.goDigitalLogger=DEBUG, godigitalLog
 
 log4j.appender.emailChangeLog=org.apache.log4j.RollingFileAppender
 log4j.appender.emailChangeLog.File=${catalina.home}/logs/emailChange_log.log
-log4j.appender.emailChangeLog.MaxFileSize=15MB
+log4j.appender.emailChangeLog.MaxFileSize=35MB
 log4j.appender.emailChangeLog.MaxBackupIndex=10
 log4j.appender.emailChangeLog.layout=org.apache.log4j.PatternLayout
 log4j.appender.emailChangeLog.layout.ConversionPattern=%d [%-5p][%24F:%t:%M:%L] - %m%n
@@ -41,7 +41,7 @@ log4j.category.emailChangeLogger=DEBUG, emailChangeLog
 
 log4j.appender.errorLog=org.apache.log4j.RollingFileAppender
 log4j.appender.errorLog.File=${catalina.home}/logs/errorIdmsChina_log.log
-log4j.appender.errorLog.MaxFileSize=15MB
+log4j.appender.errorLog.MaxFileSize=35MB
 log4j.appender.errorLog.MaxBackupIndex=10
 log4j.appender.errorLog.layout=org.apache.log4j.PatternLayout
 log4j.appender.errorLog.layout.ConversionPattern=%d [%-5p][%24F:%t:%M:%L] - %m%n
