DirectApi call udpated

--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -28,6 +28,9 @@ jksFilePath=/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
 
 uims.application.name=idms
 
+openDJUserName=Directory Manager
+openDJUserPassword=Passw0rd
+
 #smtpHost=smtp.gmail.com
 #smtpPort=587
 smtpUserName=suresh.forgerock@gmail.com
