--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -69,7 +69,7 @@ uimsCompanyManagerWsdl=https://ims-int.btsec.dev.schneider-electric.com/IMS-Comp
 uimsCompanyManagerQname=http://uimsv2.impl.company.service.ims.schneider.com/
 uimsCompanyManagerPortName=CompanyManagementV2
 
-hotpEmailVerificationURL=https://identity-int.schneider-electric.com/ui#!/email-verification?
+hotpEmailVerificationURL=https://identity-int.schneider-electric.com/ui#!/email-verification
 
 authCsvPath=/tomcat/apache-tomcat-8.5.11/logs/auth_logs.csv
 registrationCsvPath=/tomcat/apache-tomcat-8.5.11/logs/reg_logs.csv
