New Wsdl changes updated for company

--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -65,9 +65,10 @@ authUserManaUIMSVWsdl=https://ims-int.btsec.dev.schneider-electric.com/IMS-UserM
 authUserManaUIMSVQname=http://uimsv22.impl.service.ims.schneider.com/
 authUserManaUIMSVPName=UIMSV22_UserAuthenticatedManagement
 
-uimsCompanyManagerWsdl=https://ims-int.btsec.dev.schneider-electric.com/IMS-CompanyManager/UIMSV2/CompanyManagement?wsdl
+#uimsCompanyManagerWsdl=https://ims-int.btsec.dev.schneider-electric.com/IMS-CompanyManager/UIMSV2/CompanyManagement?wsdl
+uimsCompanyManagerWsdl=https://ims-int.btsec.dev.schneider-electric.com/IMS-CompanyManager/UIMSV2/2WAuthenticated-CompanyManagement?wsdl
 uimsCompanyManagerQname=http://uimsv2.impl.company.service.ims.schneider.com/
-uimsCompanyManagerPortName=CompanyManagementV2
+uimsCompanyManagerPortName=AuthenticatedCompanyManagementV2
 
 hotpEmailVerificationURL=https://identity-int.schneider-electric.com/ui#!/email-verification
 
