Featue: IDMSC-437: OIDC discovery endpoint

--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -75,6 +75,5 @@ hotpEmailVerificationURL=https://identity-int.schneider-electric.com/ui#!/email-
 authCsvPath=/tomcat/apache-tomcat-8.5.11/logs/auth_logs.csv
 registrationCsvPath=/tomcat/apache-tomcat-8.5.11/logs/reg_logs.csv
 
-
-
+revocationEndpoint.url=http://test.revocation.url
 
