--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -9,8 +9,8 @@ salesForceService.url=https://se--devmerge.cs18.my.salesforce.com
 goDigitalService.url=https://godigital-sqe2.cn.schneider-electric.com
 redirect.uri=https://identity-int.schneider-electric.com/openid/cb-basic.html
 countryKey=Country
-adminUserName=amadmin
-adminPassword=Password1
+adminUserName=restApiTechnicalUser
+adminPassword=Schneider#123
 ifwClientId=N2s0I7Ifmxyf5gIDUUihdinmrRUa
 ifwClientSecret=Qy5VK5oQgquECwhXIugBY1aamQca
 salesForceClientId=3MVG98RqVesxRgQ4tM5eh2AD6mb9oSj8LqQw.s8ozjwVQlm2jrJXiINA_Q.FCIr.UL8Li6bWbXLQtvvShLmhg
