--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -3,7 +3,7 @@
 
 #product service url
 smsService.url=http://121.43.225.10
-newSmsService.url=http://sdk.entinfo.cn:8061/webservice.asmx
+newSmsService.url=http://sdk.entinfo.cn:8061/mdsmssend.ashx
 newSMSHostName=sdk.entinfo.cn
 openAMService.url=https://identity-int.schneider-electric.com
 ifwService.url=https://cn.api-test.schneider-electric.com
