--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -6,6 +6,7 @@ smsService.url=http://121.43.225.10
 newSmsService.url=http://sdk.entinfo.cn:8061/mdsmssend.ashx
 newSMSHostName=sdk.entinfo.cn
 openAMService.url=https://identity-int.schneider-electric.com
+identityService.url=https://identity-int.schneider-electric.com
 ifwService.url=https://cn.api-test.schneider-electric.com
 salesForceService.url=https://se--devmerge.cs18.my.salesforce.com
 goDigitalService.url=https://godigital-sqe2.cn.schneider-electric.com
