IDMSC-431: Externalization of properties related to Keystore (Properties file updated)

--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -29,6 +29,13 @@ jksFilePath=/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
 
 #jksFilePath=C:\\Softwares\\apache-tomcat-8.0.41\\NginxTomcat.jks
 
+#SAML Assertion Signing Token Keystore Configuration
+keystore.samlAssertionSigning.path=classpath:sit_keystore.jks
+keystore.samlAssertionSigning.keystore.password=IDMS_SIT_2017
+keystore.samlAssertionSigning.keystore.privateKey.password=IDMS_SIT_2017
+keystore.samlAssertionSigning.keystore.certAlias=bfo_idms_uims_sync_sit
+crypto.algo.samlAssertionSigning=SHA1WithRSA
+
 uims.application.name=idms
 
 openDJUserName=Directory Manager
