getAIL response, DJ credential

--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -38,8 +38,10 @@ crypto.algo.samlAssertionSigning=SHA1WithRSA
 
 uims.application.name=idms
 
-openDJUserName=Directory Manager
-openDJUserPassword=Passw0rd
+#openDJUserName=Directory Manager
+#openDJUserPassword=Passw0rd
+openDJUserName=resetapiopendjuser
+openDJUserPassword=Welc0me0@123
 
 #smtpHost=smtp.gmail.com
 #smtpPort=587
