Code changes for PRM Registration page

--- a/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/config/properties/application.properties
@@ -87,5 +87,7 @@ hotpEmailVerificationURL=https://identity-int.schneider-electric.com/ui#!/email-
 
 authCsvPath=/tomcat/apache-tomcat-8.5.11/logs/auth_logs.csv
 registrationCsvPath=/tomcat/apache-tomcat-8.5.11/logs/reg_logs.csv
+#Value for PRM registration API
+register.prmUser.idp=idp2
 
 
