Fix: Dev and Integration applicaiton.properties sync

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -111,8 +111,13 @@ openDJHostname=identity-int.schneider-electric.com
 
 openam.cxf.conduit.name=https://openam.schneider-electric.com/.*
 goDigital.cxf.conduit.name=https://godigital.schneider-electric.cn/.*
+identityService.conduit.name=http://client.product.idms.com/.*
 
 # Contents of Email Constants taken out as properties
+#IDMS_USER_ADD_EMAILTEMPLATE_CN
+user.add.email.template.cn = ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/User_AddEmail.html
+#IDMS_USER_ADD_EMAILTEMPLATE_EN
+user.add.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplates/English/User_AddEmail.html
 #IDMS_USER_REST_PASSWORD_EMAILTEMPLATE_CN
 user.reset.password.email.template.cn = ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/User_Reset_password.html
 #IDMS_USER_REST_PASSWORD_EMAILTEMPLATE_EN
