Property file update for the merge code base:

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -111,8 +111,8 @@ openDJHostname=identity-int.schneider-electric.com
 
 openam.cxf.conduit.name=https://openam.schneider-electric.com/.*
 goDigital.cxf.conduit.name=https://godigital.schneider-electric.cn/.*
-identityService.conduit.name=http://client.product.idms.com/.*
-
+#identityService.conduit.name=http://client.product.idms.com/.*
+identityService.conduit.name={http://client.product.idms.com/}IdentityService.http-conduit
 # Contents of Email Constants taken out as properties
 #IDMS_USER_ADD_EMAILTEMPLATE_CN
 user.add.email.template.cn = ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/User_AddEmail.html
@@ -141,32 +141,33 @@ send.invitation.email.template.cn =
 
 # Contents of IdmsConstants taken out as properties
 #IDMS_FIELDSLENGTH_PROPERTIES_PATH
-fields.length.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSLENGTH.properties
+fields.length.props.path = ${idmsc.app_root.location}/picklists/INTG/IDMS_FIELDSLENGTH.properties
 #IDMS_FIELDSMANDATORY_PROPERTIES_PATH
-fields.mandatory.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSMANDATORY.properties
+fields.mandatory.props.path = ${idmsc.app_root.location}/picklists/INTG/IDMS_FIELDSMANDATORY.properties
 #IDMS_FIELDSMAPPING_PROPERTIES_PATH
-fields.mapping.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSMAPPING.properties
+fields.mapping.props.path = ${idmsc.app_root.location}/picklists/INTG/IDMS_FIELDSMAPPING.properties
 #IDMS_FIELDSMULTI_PICKLIST_PROPERTIES_PATH
-fields.multi.picklist.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSMULTIPICKLIST.properties
+fields.multi.picklist.props.path = ${idmsc.app_root.location}/picklists/INTG/IDMS_FIELDSMULTIPICKLIST.properties
 #IDMS_FIELDSPICKLIST_PROPERTIES_PATH
-fields.picklist.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSPICKLIST.properties
+fields.picklist.props.path = ${idmsc.app_root.location}/picklists/INTG/IDMS_FIELDSPICKLIST.properties
 
 # Contents of CacheTypes taken out as properties
 #APP_PROPERTIES_DIR
 app.properties.dir = ${idmsc.app_root.location}/
 #EMAIL_TEMPLATE_DIR
-email.template.dir = ${idmsc.app_root.location}/picklists/HOTP/EmailTemplates/
+email.template.dir = ${idmsc.app_root.location}/HOTP/EmailTemplates/
+cache_configuration_file=${idmsc.app_root.location}/cache/ehcache.xml
 
 # Contents of UimsConstants taken out as properties
 #CALLER_FID
 caller.fid = IDMSAdmin
 
 # Keystore and Truststore configuration
-idms.ssl.trustStore = 
-idms.ssl.trustStorePassword = 
+idms.ssl.trustStore =/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
+idms.ssl.trustStorePassword = Passw0rd
 idms.ssl.keyStoreType = jks
-idms.ssl.keyStore = 
-idms.ssl.keyStorePassword = 
+idms.ssl.keyStore =/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
+idms.ssl.keyStorePassword = Passw0rd
 idms.ssl.allowUnsafeRenegotiation = true
 idms.ssl.allowLegacyHelloMessages = true
 
