--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -36,11 +36,11 @@ headerHostname=identity-int.schneider-electric.com
 openDJHostname=10.155.116.187
 conduct_name=https://identity-int.schneider-electric.com/.*
 jksPassword=Passw0rd
-jksFilePath=/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
+#jksFilePath=/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
 #jksFilePath=C:\\Software\\apache-tomcat-8.0.43\\NginxTomcat.jks
-
+jksFilePath=C:\\Installs\\apache-tomcat-8.0.41\\NginxTomcat.jks
 #jksFilePath=C:\\Softwares\\apache-tomcat-8.0.41\\NginxTomcat.jks
-
+#jksFilePath=C:\\idms\app_root\\keystores\\NginxTomcat.jks
 #SAML Assertion Signing Token Keystore Configuration
 keystore.samlAssertionSigning.path=${idmsc.app_root.location}/keystores/sit_keystore.jks
 keystore.samlAssertionSigning.keystore.password=IDMS_SIT_2017
@@ -111,8 +111,8 @@ openDJHostname=identity-int.schneider-electric.com
 
 openam.cxf.conduit.name=https://openam.schneider-electric.com/.*
 goDigital.cxf.conduit.name=https://godigital.schneider-electric.cn/.*
-identityService.conduit.name=http://client.product.idms.com/.*
-
+#identityService.conduit.name=http://client.product.idms.com/.*
+identityService.conduit.name={http://client.product.idms.com/}IdentityService.http-conduit
 # Contents of Email Constants taken out as properties
 #IDMS_USER_ADD_EMAILTEMPLATE_CN
 user.add.email.template.cn = ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/User_AddEmail.html
@@ -157,17 +157,19 @@ app.properties.dir = ${idmsc.app_root.location}/
 #EMAIL_TEMPLATE_DIR
 email.template.dir = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/
 
+cache_configuration_file=${idmsc.app_root.location}/cache/ehcache.xml
+
 # Contents of UimsConstants taken out as properties
 #CALLER_FID
 caller.fid = IDMSAdmin
 
 # Keystore and Truststore configuration
-idms.ssl.trustStore = 
-idms.ssl.trustStorePassword = 
-idms.ssl.keyStoreType = jks
-idms.ssl.keyStore = 
-idms.ssl.keyStorePassword = 
-idms.ssl.allowUnsafeRenegotiation = true
-idms.ssl.allowLegacyHelloMessages = true
+idms.ssl.trustStore =
+idms.ssl.trustStorePassword =Passw0rd
+idms.ssl.keyStoreType =jks
+idms.ssl.keyStore =
+idms.ssl.keyStorePassword =Passw0rd
+idms.ssl.allowUnsafeRenegotiation =true
+idms.ssl.allowLegacyHelloMessages =true
 
 sys.print.beans = true
