Removal of @Profile based environment specific classes and code merge

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -101,7 +101,8 @@ authCsvPath=/tomcat/apache-tomcat-8.5.11/logs/auth_logs.csv
 registrationCsvPath=/tomcat/apache-tomcat-8.5.11/logs/reg_logs.csv
 #Value for PRM registration API
 register.prmUser.idp=idp1
-sftokentimeinminute=52
+sftokentimeinminute=55
+otpvalidationtimeinminute=15
 
 ############### New Externalized Properties ################
 openDJService.interface = com.idms.product.client.OpenDjIntService
