property file update for DEV and INT environments

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -45,7 +45,7 @@ jksFilePath=C:\\Installs\\apache-tomcat-8.0.41\\NginxTomcat.jks
 keystore.samlAssertionSigning.path=${idmsc.app_root.location}/keystores/sit_keystore.jks
 keystore.samlAssertionSigning.keystore.password=IDMS_SIT_2017
 keystore.samlAssertionSigning.keystore.privateKey.password=IDMS_SIT_2017
-keystore.samlAssertionSigning.keystore.certAlias=bfo_idms_uims_sync_sit
+keystore.samlAssertionSigning.keystore.certAlias=bfo_idms_to_uims
 crypto.algo.samlAssertionSigning=SHA1WithRSA
 
 uims.application.name=idms
@@ -165,12 +165,12 @@ cache_configuration_file=${idmsc.app_root.location}/cache/ehcache.xml
 caller.fid = IDMSAdmin
 
 # Keystore and Truststore configuration
-idms.ssl.trustStore =
-idms.ssl.trustStorePassword =Passw0rd
-idms.ssl.keyStoreType =jks
-idms.ssl.keyStore =
-idms.ssl.keyStorePassword =Passw0rd
-idms.ssl.allowUnsafeRenegotiation =true
-idms.ssl.allowLegacyHelloMessages =true
+#idms.ssl.trustStore =C:\\Installs\\apache-tomcat-8.0.41\\NginxTomcat.jks
+#idms.ssl.trustStorePassword =Passw0rd
+#idms.ssl.keyStoreType =jks
+#idms.ssl.keyStore =C:\\Installs\\apache-tomcat-8.0.41\\NginxTomcat.jks
+#idms.ssl.keyStorePassword =Passw0rd
+#idms.ssl.allowUnsafeRenegotiation =true
+#idms.ssl.allowLegacyHelloMessages =true
 
 sys.print.beans = true
