--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -164,12 +164,13 @@ cache_configuration_file=${idmsc.app_root.location}/cache/ehcache.xml
 caller.fid = IDMSAdmin
 
 # Keystore and Truststore configuration
-idms.ssl.trustStore =/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
-idms.ssl.trustStorePassword = Passw0rd
-idms.ssl.keyStoreType = jks
-idms.ssl.keyStore =/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
-idms.ssl.keyStorePassword = Passw0rd
-idms.ssl.allowUnsafeRenegotiation = true
-idms.ssl.allowLegacyHelloMessages = true
+
+#idms.ssl.trustStore =/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
+#idms.ssl.trustStorePassword = Passw0rd
+#idms.ssl.keyStoreType = jks
+#idms.ssl.keyStore =/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
+#idms.ssl.keyStorePassword = Passw0rd
+#idms.ssl.allowUnsafeRenegotiation = true
+#idms.ssl.allowLegacyHelloMessages = true
 
 sys.print.beans = true
