--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -105,7 +105,7 @@ sftokentimeinminute=55
 otpvalidationtimeinminute=15
 
 ############### New Externalized Properties ################
-openDJService.interface = com.idms.product.client.OpenDjIntService
+openDJService.interface = com.idms.product.client.OpenDjService
 openDJService.url=https://identity-int.schneider-electric.com
 
 openDJHostname=identity-int.schneider-electric.com
