--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -36,8 +36,9 @@ headerHostname=identity-int.schneider-electric.com
 openDJHostname=10.155.116.187
 conduct_name=https://identity-int.schneider-electric.com/.*
 jksPassword=Passw0rd
-jksFilePath=/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
+#jksFilePath=/tomcat/apache-tomcat-8.5.11/NginxTomcat.jks
 #jksFilePath=C:\\Software\\apache-tomcat-8.0.43\\NginxTomcat.jks
+jksFilePath=${idmsc.app_root.location}/keystores/INTG/NginxTomcat.jks
 
 #jksFilePath=C:\\Softwares\\apache-tomcat-8.0.41\\NginxTomcat.jks
 
