--- a/idmsc_restapi/schneider-idms-service/pom.xml
+++ b/idmsc_restapi/schneider-idms-service/pom.xml
@@ -66,7 +66,11 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.5</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.schneider.uims</groupId>
+			<artifactId>uims-ws-int</artifactId>
+			<version>1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>com.schneider.idms</groupId>
   			<artifactId>schneider-idms-client</artifactId>
