property file changes for code merge

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -106,9 +106,9 @@ otpvalidationtimeinminute=15
 
 ############### New Externalized Properties ################
 openDJService.interface = com.idms.product.client.OpenDjService
-openDJService.url=https://identity-int.schneider-electric.com
+#openDJService.url=https://identity-int.schneider-electric.com
 
-openDJHostname=identity-int.schneider-electric.com
+#openDJHostname=identity-int.schneider-electric.com
 
 openam.cxf.conduit.name=https://openam.schneider-electric.com/.*
 goDigital.cxf.conduit.name=https://godigital.schneider-electric.cn/.*
@@ -138,19 +138,19 @@ user.default.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplates/
 #IDMS_SEND_INVITATION_EMAILTEMPLATE_EN
 send.invitation.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplates/English/Send_Invitation.html
 #IDMS_SEND_INVITATION_EMAILTEMPLATE_CN
-send.invitation.email.template.cn =
+send.invitation.email.template.cn =${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/Send_Invitation.html
 
 # Contents of IdmsConstants taken out as properties
 #IDMS_FIELDSLENGTH_PROPERTIES_PATH
-fields.length.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSLENGTH.properties
+fields.length.props.path = ${idmsc.app_root.location}/picklists/DEV/IDMS_FIELDSLENGTH.properties
 #IDMS_FIELDSMANDATORY_PROPERTIES_PATH
-fields.mandatory.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSMANDATORY.properties
+fields.mandatory.props.path = ${idmsc.app_root.location}/picklists/DEV/IDMS_FIELDSMANDATORY.properties
 #IDMS_FIELDSMAPPING_PROPERTIES_PATH
-fields.mapping.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSMAPPING.properties
+fields.mapping.props.path = ${idmsc.app_root.location}/picklists/DEV/IDMS_FIELDSMAPPING.properties
 #IDMS_FIELDSMULTI_PICKLIST_PROPERTIES_PATH
-fields.multi.picklist.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSMULTIPICKLIST.properties
+fields.multi.picklist.props.path = ${idmsc.app_root.location}/picklists/DEV/IDMS_FIELDSMULTIPICKLIST.properties
 #IDMS_FIELDSPICKLIST_PROPERTIES_PATH
-fields.picklist.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSPICKLIST.properties
+fields.picklist.props.path = ${idmsc.app_root.location}/picklists/DEV/IDMS_FIELDSPICKLIST.properties
 
 # Contents of CacheTypes taken out as properties
 #APP_PROPERTIES_DIR
