--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -107,9 +107,9 @@ otpvalidationtimeinminute=15
 
 ############### New Externalized Properties ################
 openDJService.interface = com.idms.product.client.OpenDjService
-openDJService.url=https://identity-int.schneider-electric.com
+#openDJService.url=https://identity-int.schneider-electric.com
 
-openDJHostname=identity-int.schneider-electric.com
+#openDJHostname=identity-int.schneider-electric.com
 
 openam.cxf.conduit.name=https://openam.schneider-electric.com/.*
 goDigital.cxf.conduit.name=https://godigital.schneider-electric.cn/.*
@@ -139,7 +139,7 @@ user.default.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplates/
 #IDMS_SEND_INVITATION_EMAILTEMPLATE_EN
 send.invitation.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplates/English/Send_Invitation.html
 #IDMS_SEND_INVITATION_EMAILTEMPLATE_CN
-send.invitation.email.template.cn =
+send.invitation.email.template.cn =${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/Send_Invitation.html
 
 # Contents of IdmsConstants taken out as properties
 #IDMS_FIELDSLENGTH_PROPERTIES_PATH
