property file change

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.STG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.STG.properties
@@ -48,6 +48,7 @@ keystore.samlAssertionSigning.keystore.certAlias=bfo_idms_to_uims
 crypto.algo.samlAssertionSigning=SHA1WithRSA
 
 uims.application.name=idms
+sftokentimeinminute=55
 
 #openDJUserName=Directory Manager
 #openDJUserPassword=Passw0rd
