property file change

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -43,7 +43,7 @@ jksFilePath=${idmsc.app_root.location}/keystores/INTG/NginxTomcat.jks
 #jksFilePath=C:\\Softwares\\apache-tomcat-8.0.41\\NginxTomcat.jks
 
 #SAML Assertion Signing Token Keystore Configuration
-keystore.samlAssertionSigning.path=${idmsc.app_root.location}/keystores/sit_keystore.jks
+keystore.samlAssertionSigning.path=${idmsc.app_root.location}/keystores/INTG/sit_keystore.jks
 keystore.samlAssertionSigning.keystore.password=IDMS_SIT_2017
 keystore.samlAssertionSigning.keystore.privateKey.password=IDMS_SIT_2017
 keystore.samlAssertionSigning.keystore.certAlias=bfo_idms_to_uims
