--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.STG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.STG.properties
@@ -36,12 +36,12 @@ headerHostname=identity-stg.schneider-electric.com
 conduct_name=https://openam-stg.schneider-electric.com/.*
 jksPassword=Passw0rd
 #jksFilePath=C:\\Software\\apache-tomcat-8.0.43\\NginxTomcat.jks
-jksFilePath=/apache-tomcat-8.5.11/NginxTomcat.jks
+jksFilePath=${idmsc.app_root.location}/keystores/STG/NginxTomcat.jks
 
 #jksFilePath=C:\\subbu\\cofigfiles\\NginxTomcat.jks
 
 #SAML Assertion Signing Token Keystore Configuration
-keystore.samlAssertionSigning.path=classpath:00D0m000000CsZo1.jks
+keystore.samlAssertionSigning.path=${idmsc.app_root.location}/keystores/STG/00D0m000000CsZo1.jks
 keystore.samlAssertionSigning.keystore.password=Passw0rd
 keystore.samlAssertionSigning.keystore.privateKey.password=Passw0rd
 keystore.samlAssertionSigning.keystore.certAlias=bfo_idms_to_uims
@@ -106,7 +106,7 @@ registrationCsvPath=/apache-tomcat-8.5.11/logs/reg_logs.csv
 register.prmUser.idp=idp3
 
 ############### New Externalized Properties ################
-openDJService.interface = com.idms.product.client.OpenDjStgService
+openDJService.interface = com.idms.product.client.OpenDjService
 openDJService.url=https://opendj-stg.schneider-electric.com
 
 openDJHostname=opendj-stg.schneider-electric.com
@@ -115,56 +115,61 @@ openam.cxf.conduit.name=https://openam-stg.schneider-electric.com/.*
 goDigital.cxf.conduit.name=https://godigital-sqe2.cn.schneider-electric.com/.*
 
 # Contents of Email Constants taken out as properties
+#IDMS_USER_ADD_EMAILTEMPLATE_CN
+user.add.email.template.cn = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/Chinese/User_AddEmail.html
+#IDMS_USER_ADD_EMAILTEMPLATE_EN
+user.add.email.template.en = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/English/User_AddEmail.html
 #IDMS_USER_REST_PASSWORD_EMAILTEMPLATE_CN
-user.reset.password.email.template.cn = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/Chinese/User_Reset_password.html
+user.reset.password.email.template.cn = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/Chinese/User_Reset_password.html
 #IDMS_USER_REST_PASSWORD_EMAILTEMPLATE_EN
-user.reset.password.email.template.en = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/English/User_Reset_password.html
+user.reset.password.email.template.en = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/English/User_Reset_password.html
 #IDMS_USER_REGESTRATION_WITHPWD_EMAILTEMPLATE_CN
-user.registration.withpwd.email.template.cn = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/Chinese/User_registration_with_password.html
+user.registration.withpwd.email.template.cn = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/Chinese/User_registration_with_password.html
 #IDMS_USER_REGESTRATION_WITHPWD_EMAILTEMPLATE_EN
-user.registration.withpwd.email.template.en = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/English/User_registration_with_password.html
+user.registration.withpwd.email.template.en = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/English/User_registration_with_password.html
 #IDMS_USER_UPDATE_EMAILTEMPLATE_CN
-user.update.email.template.cn = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/Chinese/User_Update.html
+user.update.email.template.cn = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/Chinese/User_Update.html
 #IDMS_USER_UPDATE_EMAILTEMPLATE_EN
-user.update.email.template.en = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/English/User_Update.html
+user.update.email.template.en = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/English/User_Update.html
 #IDMS_USER_DEFAULT_EMAILTEMPLATE_CN
-user.default.email.template.cn = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/Chinese/User_default.html
+user.default.email.template.cn = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/Chinese/User_default.html
 #IDMS_USER_DEFAULT_EMAILTEMPLATE_EN
-user.default.email.template.en = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/English/User_default.html
+user.default.email.template.en = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/English/User_default.html
 #IDMS_SEND_INVITATION_EMAILTEMPLATE_EN
-send.invitation.email.template.en = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/English/Send_Invitation.html
+send.invitation.email.template.en = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/English/Send_Invitation.html
 #IDMS_SEND_INVITATION_EMAILTEMPLATE_CN
-send.invitation.email.template.cn =
+send.invitation.email.template.cn =${idmsc.app_root.location}/HOTP/STG/EmailTemplates/Chinese/Send_Invitation.html
 
 # Contents of IdmsConstants taken out as properties
 #IDMS_FIELDSLENGTH_PROPERTIES_PATH
-fields.length.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSLENGTH.properties
+fields.length.props.path = ${idmsc.app_root.location}/picklists/STG/IDMS_FIELDSLENGTH.properties
 #IDMS_FIELDSMANDATORY_PROPERTIES_PATH
-fields.mandatory.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSMANDATORY.properties
+fields.mandatory.props.path = ${idmsc.app_root.location}/picklists/STG/IDMS_FIELDSMANDATORY.properties
 #IDMS_FIELDSMAPPING_PROPERTIES_PATH
-fields.mapping.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSMAPPING.properties
+fields.mapping.props.path = ${idmsc.app_root.location}/picklists/STG/IDMS_FIELDSMAPPING.properties
 #IDMS_FIELDSMULTI_PICKLIST_PROPERTIES_PATH
-fields.multi.picklist.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSMULTIPICKLIST.properties
+fields.multi.picklist.props.path = ${idmsc.app_root.location}/picklists/STG/IDMS_FIELDSMULTIPICKLIST.properties
 #IDMS_FIELDSPICKLIST_PROPERTIES_PATH
-fields.picklist.props.path = ${idmsc.app_root.location}/picklists/IDMS_FIELDSPICKLIST.properties
+fields.picklist.props.path = ${idmsc.app_root.location}/picklists/STG/IDMS_FIELDSPICKLIST.properties
 
 # Contents of CacheTypes taken out as properties
 #APP_PROPERTIES_DIR
 app.properties.dir = ${idmsc.app_root.location}/
 #EMAIL_TEMPLATE_DIR
-email.template.dir = ${idmsc.app_root.location}/templates/HOTP/EmailTemplates/
+email.template.dir = ${idmsc.app_root.location}/HOTP/STG/EmailTemplates/
 
 # Contents of UimsConstants taken out as properties
 #CALLER_FID
 caller.fid = IDMSAdmin
 
 # Keystore and Truststore configuration
-idms.ssl.trustStore = /apache-tomcat-8.5.11/NginxTomcat.jks
+idms.ssl.trustStore = ${idmsc.app_root.location}/keystores/STG/NginxTomcat.jks
 idms.ssl.trustStorePassword = Passw0rd
 idms.ssl.keyStoreType = jks
-idms.ssl.keyStore = /apache-tomcat-8.5.11/00D0m000000CsZo1.jks
+idms.ssl.keyStore = ${idmsc.app_root.location}/keystores/STG/00D0m000000CsZo1.jks
 idms.ssl.keyStorePassword = Passw0rd
 idms.ssl.allowUnsafeRenegotiation = true
 idms.ssl.allowLegacyHelloMessages = true
 
 sys.print.beans = true
+
