--- a/idmsc_restapi/schneider-idms-service/src/main/resources/log4j.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/log4j.properties
@@ -44,6 +44,14 @@ log4j.appender.errorLog.File=${catalina.home}/logs/errorIdmsChina_log.log
 log4j.appender.errorLog.MaxFileSize=35MB
 log4j.appender.errorLog.MaxBackupIndex=10
 log4j.appender.errorLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.errorLog.layout.ConversionPattern=%d [%-5p][%24F:%t:%M:%L] - %m%n
+log4j.appender.errorLog.layout.ConversionPattern=%d [%-5p][%24F:%M:%L] - %m%n
 log4j.appender.errorLog.Threshold=error
 #log4j.category.errorLogger=DEBUG, errorLog
+
+log4j.appender.uimsSyncErrorLog=org.apache.log4j.RollingFileAppender
+log4j.appender.uimsSyncErrorLog.File=${catalina.home}/logs/uimsSyncErrorLog.log
+log4j.appender.uimsSyncErrorLog.MaxFileSize=35MB
+log4j.appender.uimsSyncErrorLog.MaxBackupIndex=10
+log4j.appender.uimsSyncErrorLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.uimsSyncErrorLog.layout.ConversionPattern=%d [%-5p][%24F:%M:%L] - %m%n
+log4j.category.uimsSyncErrorLogger=ERROR, uimsSyncErrorLog
