--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -174,3 +174,5 @@ caller.fid = IDMSAdmin
 #idms.ssl.allowLegacyHelloMessages =true
 
 sys.print.beans = true
+#Key for domain name 
+domain.name = identity-int.schneider-electric.com
