Code changes for auto refresh of property files without server restart.

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -11,6 +11,7 @@
 ## ------------------------ App CLI Properties ---------------------------
 
 #product service url
+idms.env =INTG
 smsService.url=http://121.43.225.10
 newSmsService.url=http://sdk.entinfo.cn:8061/mdsmssend.ashx
 newSMSHostName=sdk.entinfo.cn
@@ -159,6 +160,7 @@ app.properties.dir = ${idmsc.app_root.location}/
 #EMAIL_TEMPLATE_DIR
 email.template.dir = ${idmsc.app_root.location}/HOTP/EmailTemplates/
 cache_configuration_file=${idmsc.app_root.location}/cache/ehcache.xml
+app.properties.file = ${idmsc.app_root.location}/properties/application.${idms.env}.properties
 
 # Contents of UimsConstants taken out as properties
 #CALLER_FID
@@ -175,3 +177,6 @@ caller.fid = IDMSAdmin
 #idms.ssl.allowLegacyHelloMessages = true
 
 sys.print.beans = true
+#Key for domain name 
+domain.name = identity-int.schneider-electric.com
+idms.sendOTPOverEmail = true
