application.INTG.properties modified

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -179,4 +179,4 @@ caller.fid = IDMSAdmin
 sys.print.beans = true
 #Key for domain name 
 domain.name = identity-int.schneider-electric.com
-idms.sendOTPOverEmail = true
+enable.sendOtpOverEmail = true
