code changes for property file auto refresh

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -9,7 +9,7 @@
 # idmsc.app_root.location = /opt/idmsc/app_root OR classpath:app_root
 #
 ## ------------------------ App CLI Properties ---------------------------
-idms.env =PROD
+idms.env =DEV
 #product service url
 smsService.url=http://121.43.225.10
 newSmsService.url=http://sdk.entinfo.cn:8061/mdsmssend.ashx
