certificate change and setpassword changes

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -43,8 +43,8 @@ jksFilePath=C:\\Installs\\apache-tomcat-8.0.41\\NginxTomcat.jks
 #jksFilePath=C:\\idms\app_root\\keystores\\NginxTomcat.jks
 #SAML Assertion Signing Token Keystore Configuration
 keystore.samlAssertionSigning.path=${idmsc.app_root.location}/keystores/sit_keystore.jks
-keystore.samlAssertionSigning.keystore.password=IDMS_SIT_2017
-keystore.samlAssertionSigning.keystore.privateKey.password=IDMS_SIT_2017
+keystore.samlAssertionSigning.keystore.password=Passw0rd
+keystore.samlAssertionSigning.keystore.privateKey.password=Passw0rd
 keystore.samlAssertionSigning.keystore.certAlias=bfo_idms_to_uims
 crypto.algo.samlAssertionSigning=SHA1WithRSA
 
