--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -44,8 +44,8 @@ jksFilePath=${idmsc.app_root.location}/keystores/INTG/NginxTomcat.jks
 
 #SAML Assertion Signing Token Keystore Configuration
 keystore.samlAssertionSigning.path=${idmsc.app_root.location}/keystores/sit_keystore.jks
-keystore.samlAssertionSigning.keystore.password=IDMS_SIT_2017
-keystore.samlAssertionSigning.keystore.privateKey.password=IDMS_SIT_2017
+keystore.samlAssertionSigning.keystore.password=Passw0rd
+keystore.samlAssertionSigning.keystore.privateKey.password=Passw0rd
 keystore.samlAssertionSigning.keystore.certAlias=bfo_idms_to_uims
 crypto.algo.samlAssertionSigning=SHA1WithRSA
 
