checkuserexist and temp mail disable

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/picklists/DEV/IDMS_FIELDSPICKLIST.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/picklists/DEV/IDMS_FIELDSPICKLIST.properties
@@ -67,24 +67,4 @@ Applications=PACE,PRM,PRMPORTAL,mySchneiderPartnerPortal,MYSCHNEIDERPARTNERPORTA
 UIMSPasswordSync=true
 UIMSCreateUserSync=true
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+TestMailDomain=mailinator.com,yopmail.com,getnada.com,harakirimail.com
