--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -10,6 +10,7 @@
 #
 ## ------------------------ App CLI Properties ---------------------------
 idms.env =DEV
+idmsc.app_root.location=C:\\idms\\app_root
 #product service url
 smsService.url=http://121.43.225.10
 newSmsService.url=http://sdk.entinfo.cn:8061/mdsmssend.ashx
@@ -178,3 +179,4 @@ sys.print.beans = true
 #Key for domain name 
 domain.name = identity-int.schneider-electric.com
 enable.sendOtpOverEmail=true
+disableTestMailDomain=true
