property file change

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -180,4 +180,5 @@ sys.print.beans = true
 #Key for domain name 
 domain.name = identity-int.schneider-electric.com
 enable.sendOtpOverEmail = true
-disableTestMailDomain=true
+#default value of enableTestMailDomain is false
+enableTestMailDomain=false
