Code chnages for email template name format for IDMSC-806

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -181,3 +181,4 @@ domain.name = identity-int.schneider-electric.com
 enable.sendOtpOverEmail=true
 #default value of enableTestMailDomain is false
 enableTestMailDomain=false
+idmsc.emailUserNameFormat=FirstName
