--- a/idmsc_restapi/schneider-idms-service/pom.xml
+++ b/idmsc_restapi/schneider-idms-service/pom.xml
@@ -67,6 +67,12 @@
 			<version>1.7.5</version>
 		</dependency>
 		<dependency>
+    	<groupId>log4j</groupId>
+   	 	<artifactId>apache-log4j-extras</artifactId>
+   	 	<version>1.2.17</version>
+   	 	<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.schneider.uims</groupId>
 			<artifactId>schneider-uims-ws</artifactId>
 			<version>1.0</version>
