--- a/idmsc_restapi/schneider-idms/pom.xml
+++ b/idmsc_restapi/schneider-idms/pom.xml
@@ -149,6 +149,12 @@
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
 		</dependency>
+	<!--<dependency>
+    	<groupId>log4j</groupId>
+   	 	<artifactId>apache-log4j-extras</artifactId>
+   	 	<version>1.2.17</version>
+   	 	<scope>compile</scope>
+		</dependency> -->
 		
 		</dependencies>
 	</dependencyManagement>
