--- a/idmsc_restapi/schneider-idms-service/src/main/resources/log4j.properties
+++ b/idmsc_restapi/schneider-idms-service/src/main/resources/log4j.properties
@@ -16,7 +16,7 @@ log4j.appender.file.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolic
 log4j.appender.file.rollingPolicy.ActiveFileName=${catalina.home}/logs/myapp.log
 log4j.appender.file.rollingPolicy.FileNamePattern=${catalina.home}/logs/myapp.%d{yyyy-MM-dd}.%i.log.gz
 log4j.appender.file.triggeringPolicy=org.apache.log4j.rolling.SizeBasedTriggeringPolicy
-log4j.appender.file.triggeringPolicy.MaxFileSize=100MB
+log4j.appender.file.triggeringPolicy.MaxFileSize=104857600
 log4j.appender.file.Threshold=INFO
 #log4j.appender.file.MaxBackupIndex=10
 #log4j.appender.file.MaxFileSize=35MB
