Maintenance Mode Indication Feature Implementation

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -182,3 +182,4 @@ enable.sendOtpOverEmail=true
 #default value of enableTestMailDomain is false
 enableTestMailDomain=false
 idmsc.emailUserNameFormat=FirstName
+idmsc.maintenance_mode_global=False
