Code changes for Support maintenance mode

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.DEV.properties
@@ -182,4 +182,6 @@ enable.sendOtpOverEmail=true
 #default value of enableTestMailDomain is false
 enableTestMailDomain=false
 idmsc.emailUserNameFormat=FirstName
+#default value of maintenance_mode_global is False,Other supported values are Complete
+#Comma separated values of  Registration,Login,Profile_Update,AIL_Update
 idmsc.maintenance_mode_global=False
