mySchneiderPartnerPortal email templates

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/properties/application.INTG.properties
@@ -142,6 +142,19 @@ send.invitation.email.template.en = ${idmsc.app_root.location}/HOTP/EmailTemplat
 #IDMS_SEND_INVITATION_EMAILTEMPLATE_CN
 send.invitation.email.template.cn =${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/Send_Invitation.html
 
+#mySchneiderPartnerPortal EmailTemplates 
+prm.self.registration.email.template.cn= ${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/mySchneider_self_registration.html
+
+prm.self.registration.email.template.en=${idmsc.app_root.location}/HOTP/EmailTemplates/English/mySchneider_self_registration.html
+
+prm.internal.registration.email.template.cn=${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/mySchneider_internal_registration.html
+
+prm.internal.registration.email.template.en=${idmsc.app_root.location}/HOTP/EmailTemplates/English/mySchneider_internal_registration.html
+
+prm.eclipse.registration.email.template.cn=${idmsc.app_root.location}/HOTP/EmailTemplates/Chinese/mySchneider_eclipse_registration.html
+
+prm.eclipse.registration.email.template.en=${idmsc.app_root.location}/HOTP/EmailTemplates/English/mySchneider_eclipse_registration.html
+
 # Contents of IdmsConstants taken out as properties
 #IDMS_FIELDSLENGTH_PROPERTIES_PATH
 fields.length.props.path = ${idmsc.app_root.location}/picklists/INTG/IDMS_FIELDSLENGTH.properties
